Fix opening source files with relative paths

BUG: 428465